--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,27 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Eli Pagan</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Professional Portfolio</title>
 
 </head>    
 <body>
+    <!-- header -->
+    <header>
+        <div>
+            <h1>Eli</h1>
+        <!-- navigation -->
+        <nav>
+          <ul>
+              <li>Home</li>
+              <li>About<br>Me</li>
+              <li>Portfolio</li>
+              <li>Contact</li>
+          </ul>
+
+        </nav>
+      </div>
+    </header>
 
   </body>
 </html>
