--- a/portfolio.html
+++ b/portfolio.html
@@ -9,19 +9,24 @@
 <body>
     <!-- header -->
     <header>
-        <div>
             <h1>Eli</h1>
         <!-- navigation -->
         <nav>
           <ul>
-              <li>Home</li>
-              <li>About<br>Me</li>
-              <li>Portfolio</li>
-              <li>Contact</li>
+              <li> 
+                   <a href="#Home">Home</a>
+               </li>
+              <li>
+               <a href="#AboutMe">About Me</a>
+              </li>
+              <li>
+               <a href="#Portfolio">Portfolio</a>
+              </li>
+              <li>
+               <a href="#Contact">Contact</a> 
+              </li>
           </ul>
-
         </nav>
-      </div>
     </header>
 
   </body>
