--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <!-- header -->
     <header>
-            <h1>Eli</h1>
+            <h1>Eli Pagan</h1>
         <!-- navigation -->
         <nav>
           <ul>
@@ -17,7 +17,7 @@
                    <a href="#Home">Home</a>
                </li>
               <li>
-               <a href="#AboutMe">About Me</a>
+               <a href="#AboutMe">About</a>
               </li>
               <li>
                <a href="#Portfolio">Portfolio</a>
