create content sections

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,20 +14,56 @@
         <nav>
           <ul>
               <li> 
-                   <a href="#Home">Home</a>
+                <a href="#AboutMe">About</a>
                </li>
               <li>
-               <a href="#AboutMe">About</a>
+                <a href="#Portfolio">Portfolio</a>
               </li>
               <li>
-               <a href="#Portfolio">Portfolio</a>
-              </li>
+                <a href="#Gallery">Gallery</a>
+               </li>
               <li>
                <a href="#Contact">Contact</a> 
               </li>
           </ul>
         </nav>
     </header>
+
+    <!-- HERO -->
+    <section>
+      <div>
+        <h2>Eli Pagan</h2>
+      </div>
+
+    </section>
+
+    <!-- ABOUT SECTION -->
+    <section>
+      <div>
+        <h3></h3>
+      </div>
+    </section>
+
+    <!-- PORTFOLIO SECTION -->
+    <section>
+      <div>
+        <h3>Portfolio</h3>
+      </div>
+    </section>
+
+    <!-- GALLERY SECTION-->
+    <section>
+      <div>
+        <h3>Gallery</h3>
+      </div>
+    </section>
+
+    <!-- CONTACT SECTION -->
+    <section>
+      <div>
+        <h3>Contact</h3>
+      </div>
+    </section>
 
   </body>
 </html>
