--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,13 @@
     <section>
       <div>
         <h2>Eli Pagan</h2>
+        <p>HTML, CSS, RESPONSIVE DESIGN <br>
+              READY TO WORK FOR YOU!
+        </p>
       </div>
-
+      <div>
+        <img src="./assets/images/eli-img.jpg" alt="Eli Pagan" />
+      </div>
     </section>
 
     <!-- ABOUT SECTION -->
