added section content to both the HERO and ABOUT

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,7 @@
               <li>
                 <a href="#Portfolio">Portfolio</a>
               </li>
-              <li>
-                <a href="#Gallery">Gallery</a>
-               </li>
-              <li>
+             <li>
                <a href="#Contact">Contact</a> 
               </li>
           </ul>
@@ -30,41 +27,40 @@
     </header>
 
     <!-- HERO -->
-    <section>
+    <section class="hero">
       <div>
-        <h2>Eli Pagan</h2>
-        <p>HTML, CSS, RESPONSIVE DESIGN <br>
+        <h2>Hi, I am</h2>
+        <h2> Eli Pagan</h2>
+        <p>HTML, CSS, GIT, RESPONSIVE DESIGN <br>
               READY TO WORK FOR YOU!
         </p>
       </div>
       <div>
-        <img src="./assets/images/eli-img.jpg" alt="Eli Pagan" />
+        <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
       </div>
     </section>
 
     <!-- ABOUT SECTION -->
-    <section>
+    <section id="About">
       <div>
-        <h3></h3>
+        <h3>About</h3>
+        <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
+          I choose to study and learn web development because it is both challeneging and rewarding as a career and personal 
+          accomplishment. I am looking forward to learning and understand more in depth of what it is to be a full stack 
+          web developer and hopefully it's with YOU! 
+        </p>
       </div>
     </section>
 
     <!-- PORTFOLIO SECTION -->
-    <section>
+    <section id="Portfolio">
       <div>
         <h3>Portfolio</h3>
       </div>
     </section>
 
-    <!-- GALLERY SECTION-->
-    <section>
-      <div>
-        <h3>Gallery</h3>
-      </div>
-    </section>
-
     <!-- CONTACT SECTION -->
-    <section>
+    <section id="Contact">
       <div>
         <h3>Contact</h3>
       </div>
