add content and classes

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,21 +27,21 @@
     </header>
 
     <!-- HERO -->
-    <section class="hero">
+    <div class="hero container-1">
       <div>
         <h2>Hi, I am</h2>
         <h2> Eli Pagan</h2>
-        <p>HTML, CSS, GIT, RESPONSIVE DESIGN <br>
+        <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT <br>
               READY TO WORK FOR YOU!
         </p>
       </div>
       <div>
         <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
       </div>
-    </section>
+    </div>
 
     <!-- ABOUT SECTION -->
-    <section id="About">
+    <div id="About container-2">
       <div>
         <h3>About</h3>
         <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
@@ -50,21 +50,37 @@
           web developer and hopefully it's with YOU! 
         </p>
       </div>
-    </section>
+    </div>
 
     <!-- PORTFOLIO SECTION -->
-    <section id="Portfolio">
-      <div>
+ <div id="Portfolio container-3">
+      <div class="box-1">
         <h3>Portfolio</h3>
       </div>
-    </section>
+      <div class="box-2">
+        <h4>Run Buddy</h4>
+        <p>HTML/CSS</p>
+      </div>
+    <div class="box-3">
+      <h4>Portfolio</h4>
+      <p>HTML/CSS/Advanced CSS</p>
+    </div>
+  </div>
 
     <!-- CONTACT SECTION -->
-    <section id="Contact">
+    <div id="Contact">
       <div>
         <h3>Contact</h3>
+        <address>
+          43 Bronx River RD <br>
+          Yonkers, New York <br>
+          10461 <br>
+          Phone: 347-445-9749 <br>
+          Email: <a href=""mailto:EliezerPagan2389@gmail.com">EliezerPagan2389@gmail.com</a> <br>
+          Social Media: 
+        </address>
       </div>
-    </section>
+    </div>
 
   </body>
 </html>
