add borders and background images

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- HERO -->
-    <div class="hero container-1">
+    <div class="hero">
       <div>
         <h2>Hi, I am</h2>
         <h2> Eli Pagan</h2>
@@ -41,7 +41,7 @@
     </div>
 
     <!-- ABOUT SECTION -->
-    <div id="About container-2">
+    <div id="About"  class="container-1">
       <div>
         <h3>About</h3>
         <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
@@ -53,7 +53,7 @@
     </div>
 
     <!-- PORTFOLIO SECTION -->
- <div id="Portfolio container-3">
+ <div id="Portfolio" class="container-2">
       <div class="box-1">
         <h3>Portfolio</h3>
       </div>
@@ -68,7 +68,7 @@
   </div>
 
     <!-- CONTACT SECTION -->
-    <div id="Contact">
+    <div id="Contact" class="contact">
       <div>
         <h3>Contact</h3>
         <address>
