added to css/html

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,33 +27,35 @@
     </header>
 
     <!-- HERO -->
-    <div class="hero">
-      <div>
-        <h2>Hi, I am</h2>
-        <h2> Eli Pagan</h2>
+    <section class="hero">
+      <div class="yes">
+        <h2>Hi, I am
+         <br> Eli Pagan</h2>
         <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT <br>
               READY TO WORK FOR YOU!
         </p>
       </div>
-      <div>
+      <div class="live">
         <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
       </div>
-    </div>
+    </section>
 
     <!-- ABOUT SECTION -->
-    <div id="About"  class="container-1">
+    <section id="About"  class="container-1">
       <div>
-        <h3>About</h3>
-        <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
+        <h3 class="about">About</h3>
+        </div>
+        <div>
+        <p class="bio">I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
           I choose to study and learn web development because it is both challeneging and rewarding as a career and personal 
           accomplishment. I am looking forward to learning and understand more in depth of what it is to be a full stack 
           web developer and hopefully it's with YOU! 
         </p>
       </div>
-    </div>
+    </section>
 
     <!-- PORTFOLIO SECTION -->
- <div id="Portfolio" class="container-2">
+ <section id="Portfolio" class="container-2">
       <div class="box-1">
         <h3>Portfolio</h3>
       </div>
@@ -65,18 +67,20 @@
       <h4>Portfolio</h4>
       <p>HTML/CSS/Advanced CSS</p>
     </div>
-  </div>
+ </section>
 
     <!-- CONTACT SECTION -->
     <div id="Contact" class="contact">
+      <div class="tact">
+      <h3>Contact</h3>
+      </div>
       <div>
-        <h3>Contact</h3>
         <address>
           43 Bronx River RD <br>
           Yonkers, New York <br>
           10461 <br>
           Phone: 347-445-9749 <br>
-          Email: <a href=""mailto:EliezerPagan2389@gmail.com">EliezerPagan2389@gmail.com</a> <br>
+          Email: <a href="mailto:EliezerPagan2389@gmail.com">EliezerPagan2389@gmail.com</a> <br>
           Social Media: 
         </address>
       </div>
