updated hero section

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,8 @@
       <div class="yes">
         <h2>Hi, I am
          <br> Eli Pagan</h2>
-        <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT <br>
-              READY TO WORK FOR YOU!
-        </p>
+        <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT</p>
+             <p class="fly">READY TO WORK FOR YOU!</p>
       </div>
       <div class="live">
         <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
@@ -45,8 +44,8 @@
       <div>
         <h3 class="about">About</h3>
         </div>
-        <div>
-        <p class="bio">I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
+        <div class="bio">
+        <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
           I choose to study and learn web development because it is both challeneging and rewarding as a career and personal 
           accomplishment. I am looking forward to learning and understand more in depth of what it is to be a full stack 
           web developer and hopefully it's with YOU! 
@@ -70,7 +69,7 @@
  </section>
 
     <!-- CONTACT SECTION -->
-    <div id="Contact" class="contact">
+    <section id="Contact" class="contact">
       <div class="tact">
       <h3>Contact</h3>
       </div>
@@ -84,7 +83,7 @@
           Social Media: 
         </address>
       </div>
-    </div>
+    </section>
 
   </body>
 </html>
