--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                 <a href="#AboutMe">About</a>
                </li>
               <li>
-                <a href="#Portfolio">Portfolio</a>
+                <a href="#Work">Work</a>
               </li>
              <li>
                <a href="#Contact">Contact</a> 
@@ -41,30 +41,35 @@
 
     <!-- ABOUT SECTION -->
     <section id="About"  class="container-1">
-      <div>
-        <h3 class="about">About</h3>
+      <div class="about">
+        <h3>About</h3>
         </div>
         <div class="bio">
         <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
-          I choose to study and learn web development because it is both challeneging and rewarding as a career and personal 
-          accomplishment. I am looking forward to learning and understand more in depth of what it is to be a full stack 
-          web developer and hopefully it's with YOU! 
+          I chose to study and learn web development because it is both challeneging and rewarding as a career and personal 
+          goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way so that 
+          I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!
+        
         </p>
       </div>
     </section>
 
     <!-- PORTFOLIO SECTION -->
- <section id="Portfolio" class="container-2">
-      <div class="box-1">
-        <h3>Portfolio</h3>
-      </div>
-      <div class="box-2">
+ <section id="Work" class="container-2">
+        <h3>Work</h3>
+    <div class="box-2">
         <h4>Run Buddy</h4>
         <p>HTML/CSS</p>
-      </div>
+        <a href="https://elip2389.github.io/run-buddy/">
+        <img src="./assets/images/runbuddy-img.png">
+        </a>
+    </div>
     <div class="box-3">
-      <h4>Portfolio</h4>
+      <h4>Portfolio Project</h4>
       <p>HTML/CSS/Advanced CSS</p>
+      <a href="">
+        <img src="./assets/images/port-img.png">
+      </a>
     </div>
  </section>
 
