--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Professional Portfolio</title>
 
@@ -40,8 +41,8 @@
     </section>
 
     <!-- ABOUT SECTION -->
-    <section id="About"  class="container-1">
-      <div class="about">
+    <section id="About"  class="About">
+      <div class="me">
         <h3>About</h3>
         </div>
         <div class="bio">
@@ -55,22 +56,24 @@
     </section>
 
     <!-- PORTFOLIO SECTION -->
- <section id="Work" class="container-2">
+ <section id="Work" class="portfolio">
         <h3>Work</h3>
-    <div class="box-2">
+  <div class="portfolios">  
+    <div class="box-1">
         <h4>Run Buddy</h4>
-        <p>HTML/CSS</p>
+        <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/run-buddy/">
         <img src="./assets/images/runbuddy-img.png">
         </a>
     </div>
-    <div class="box-3">
+    <div class="box-2">
       <h4>Portfolio Project</h4>
-      <p>HTML/CSS/Advanced CSS</p>
+      <p>HTML/CSS/RESPONSIVE DESIGN</p>
       <a href="">
         <img src="./assets/images/port-img.png">
       </a>
     </div>
+  </div>  
  </section>
 
     <!-- CONTACT SECTION -->
@@ -84,7 +87,7 @@
           Yonkers, New York <br>
           10461 <br>
           Phone: 347-445-9749 <br>
-          Email: <a href="mailto:EliezerPagan2389@gmail.com">EliezerPagan2389@gmail.com</a> <br>
+          Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a> <br>
           Social Media: 
         </address>
       </div>
