updates to everything lol

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,21 +57,31 @@
 
     <!-- PORTFOLIO SECTION -->
  <section id="Work" class="portfolio">
+      <div class="works">
         <h3>Work</h3>
+      </div>
   <div class="portfolios">  
-    <div class="box-1">
+    <div>
+      <div>
         <h4>Run Buddy</h4>
         <p>HTML/CSS/RESPONSIVE DESIGN</p>
+        </div>
+        <div>
         <a href="https://elip2389.github.io/run-buddy/">
         <img src="./assets/images/runbuddy-img.png">
         </a>
+        </div>
     </div>
-    <div class="box-2">
+    <div>
+      <div>
       <h4>Portfolio Project</h4>
       <p>HTML/CSS/RESPONSIVE DESIGN</p>
+      </div>
+      <div>
       <a href="">
         <img src="./assets/images/port-img.png">
       </a>
+      </div>
     </div>
   </div>  
  </section>
@@ -88,7 +98,6 @@
           10461 <br>
           Phone: 347-445-9749 <br>
           Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a> <br>
-          Social Media: 
         </address>
       </div>
     </section>
