--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
         </div>
         <div>
         <a href="https://elip2389.github.io/run-buddy/">
-        <img src="./assets/images/runbuddy-img.png">
+        <img src="./assets/images/runbuddy-img.png" alt="Run Buddy">
         </a>
         </div>
     </div>
@@ -78,8 +78,8 @@
       <p>HTML/CSS/RESPONSIVE DESIGN</p>
       </div>
       <div>
-      <a href="">
-        <img src="./assets/images/port-img.png">
+      <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
+        <img src="./assets/images/port-img.png" alt="Portfolio Site">
       </a>
       </div>
     </div>
