--- a/portfolio.html
+++ b/portfolio.html
@@ -56,34 +56,34 @@
     </section>
 
     <!-- PORTFOLIO SECTION -->
- <section id="Work" class="portfolio">
+ <div id="Work" class="portfolio">
       <div class="works">
         <h3>Work</h3>
       </div>
-  <div class="portfolios">  
-    <div>
-      <div>
-        <h4>Run Buddy</h4>
-        <p>HTML/CSS/RESPONSIVE DESIGN</p>
-        </div>
-        <div>
+  <div class="portfolios">
+   <div class="box-1">  
+      <h4>Run Buddy</h4>
+      <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/run-buddy/">
         <img src="./assets/images/runbuddy-img.png" alt="Run Buddy">
         </a>
-        </div>
     </div>
-    <div>
-      <div>
+    <div class="box-2">
       <h4>Portfolio Project</h4>
       <p>HTML/CSS/RESPONSIVE DESIGN</p>
-      </div>
-      <div>
       <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
         <img src="./assets/images/port-img.png" alt="Portfolio Site">
       </a>
-      </div>
     </div>
-  </div>  
+      <div class="box-3">
+        <h4> Robo Gladiators</h4>
+        <p>JAVASCRIPT</p>
+      <a href="https://elip2389.github.io/robo-gladiatiors/">
+      <img src="./assets/images/robo-img.png" alt="Robo Gladiators">
+      </a>
+    </div>
+  </div>
+</div>  
  </section>
 
     <!-- CONTACT SECTION -->
