--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <nav>
           <ul>
               <li> 
-                <a href="#AboutMe">About</a>
+                 <a href="#About">About</a>
                </li>
               <li>
-                <a href="#Work">Work</a>
+                 <a href="#Work">Work</a>
               </li>
              <li>
-               <a href="#Contact">Contact</a> 
+                <a href="#Contact">Contact</a> 
+              </li>
+              <li>
+                 <a href="./assets/images/Eliezer-Pagan (2).pdf">Resume</a>
               </li>
           </ul>
         </nav>
