--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#Contact">Contact</a> 
               </li>
               <li>
-                 <a href="./assets/images/Eliezer-Pagan (2).pdf">Resume</a>
+                <a href="./assets/images/Eliezer-Pagan (2).pdf">Resume</a>
               </li>
           </ul>
         </nav>
@@ -64,6 +64,7 @@
         <h3>Work</h3>
       </div>
   <div class="portfolios">
+    <section>
    <div class="box-1">  
       <h4>Run Buddy</h4>
       <p>HTML/CSS/RESPONSIVE DESIGN</p>
@@ -85,6 +86,7 @@
       <img src="./assets/images/robo-img.png" alt="Robo Gladiators">
       </a>
     </div>
+    </section>
   </div>
 </div>  
  </section>
