--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Professional Portfolio</title>
 
@@ -10,7 +11,7 @@
 <body>
     <!-- header -->
     <header>
-            <h1>Eli Pagan</h1>
+           <a href="./index.html"> <h1>Eli Pagan</h1> </a>
         <!-- navigation -->
         <nav>
           <ul>
@@ -24,7 +25,7 @@
                 <a href="#Contact">Contact</a> 
               </li>
               <li>
-                <a href="./assets/images/Eliezer-Pagan (2).pdf">Resume</a>
+                <a href="./assets/images/Eliezer-Pagan (4).pdf">Resume</a>
               </li>
           </ul>
         </nav>
@@ -32,14 +33,16 @@
 
     <!-- HERO -->
     <section class="hero">
-      <div class="yes">
+      <div class="columns">
+      <div class="intro column is-8">
         <h2>Hi, I am
          <br> Eli Pagan</h2>
         <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT</p>
              <p class="fly">READY TO WORK FOR YOU!</p>
-      </div>
-      <div class="live">
+             </div>
+      <div class="live column">
         <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
+      </div>
       </div>
     </section>
 
@@ -49,7 +52,7 @@
         <h3>About</h3>
         </div>
         <div class="bio">
-        <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, and MORE!
+        <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
           I chose to study and learn web development because it is both challeneging and rewarding as a career and personal 
           goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way so that 
           I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!
@@ -59,34 +62,61 @@
     </section>
 
     <!-- PORTFOLIO SECTION -->
- <div id="Work" class="portfolio">
+    <section class="container is-fluid">
+ <div id="Work" class="portfolio columns is-mobile">
       <div class="works">
         <h3>Work</h3>
       </div>
-  <div class="portfolios">
-    <section>
-   <div class="box-1">  
-      <h4>Run Buddy</h4>
+  <div class="portfolios columns">
+   <div class="box-1 column is-11"> 
+     <h4>The Sprint Group Bar Finder</h4>
+     <p>HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p> 
+    <a href="">
+      <img src="./assets/images/portfolio2-img.png">
+    </a>
+    </div>
+    <div class="box-2 column is-4">
+      <h4>Horison Media Project</h4>
       <p>HTML/CSS/RESPONSIVE DESIGN</p>
-        <a href="https://elip2389.github.io/run-buddy/">
-        <img src="./assets/images/runbuddy-img.png" alt="Run Buddy">
+        <a href="https://elip2389.github.io/horiseonMedia-challenge1/">
+        <img src="./assets/images/horison-img.png" alt="Horison Media">
         </a>
     </div>
-    <div class="box-2">
-      <h4>Portfolio Project</h4>
-      <p>HTML/CSS/RESPONSIVE DESIGN</p>
-      <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
-        <img src="./assets/images/port-img.png" alt="Portfolio Site">
-      </a>
+      <div class="box-3 column is-4">
+        <h4>Portfolio Project</h4>
+        <p>HTML/CSS/RESPONSIVE DESIGN</p>
+        <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
+          <img src="./assets/images/port-img.png" alt="Portfolio Site">
+        </a>
     </div>
-      <div class="box-3">
-        <h4> Robo Gladiators</h4>
-        <p>JAVASCRIPT</p>
-      <a href="https://elip2389.github.io/robo-gladiatiors/">
-      <img src="./assets/images/robo-img.png" alt="Robo Gladiators">
-      </a>
+    <div class="box-4 column is-4">
+      <h4>Password Generator</h4>
+      <p>JAVASCRIPT</p>
+      <a href="https://elip2389.github.io/password-generator-chall03/">
+        <img src="./assets/images/passgen-img.png" alt="Password Generator">
+        </a>
     </div>
-    </section>
+    <div class="box-5 column is-4">
+      <h4>Coding Quiz</h4>
+      <p>HTML/CSS/JAVASCRIPT</p>
+      <a href="https://elip2389.github.io/CodingQuiz-chall04/">
+        <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
+        </a>
+    </div>
+    <div class="box-6 column is-4">
+      <h4>Work Day Scheduler</h4>
+      <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
+      <a href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
+        <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
+        </a>
+    </div>
+    <div class="box-7 column is-4">
+      <h4>Weather DashBoard</h4>
+      <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
+      <a href="https://elip2389.github.io/weather-dashboard-chall06/">
+        <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
+        </a>
+    </div>
   </div>
 </div>  
  </section>
