--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
    <div class="box-1 column is-11"> 
      <h4>The Sprint Group Bar Finder</h4>
      <p>HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p> 
-    <a href="">
-      <img src="./assets/images/portfolio2-img.png">
+    <a href="https://adamdagi.github.io/project-01/">
+      <img src="./assets/images/portfolio2-img.png" alt="Project 01">
     </a>
     </div>
     <div class="box-2 column is-4">
