--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="bio">
         <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
-          I chose to study and learn web development because it is both challeneging and rewarding as a career and personal 
+          I chose to study and learn web development because it is both challenging and rewarding as a career and personal 
           goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way so that 
           I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!
         
