adding projects and css styling to portfolio

--- a/index.html
+++ b/index.html
@@ -62,62 +62,77 @@
     </section>
 
     <!-- PORTFOLIO SECTION -->
-    <section class="container is-fluid">
- <div id="Work" class="portfolio columns is-mobile">
-      <div class="works">
+    <section class="container has-text-centered-mobile">
+ <div id="Work" class=" is-mobile">
+      <div class="">
         <h3>Work</h3>
       </div>
-  <div class="portfolios columns">
-   <div class="box-1 column is-11"> 
+
+  <div class="portfolios tile  is-vertical is-parent is-mobile">
+   <div class="box "> 
      <h4>The Sprint Group Bar Finder</h4>
      <p>HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p> 
     <a href="https://adamdagi.github.io/project-01/">
       <img src="./assets/images/portfolio2-img.png" alt="Project 01">
     </a>
     </div>
-    <div class="box-2 column is-4">
+    
+    <div class="box">
+      <h4>The HYPE</h4>
+      <p>HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
+         MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
+      <a href="https://immense-springs-30161.herokuapp.com/">
+        <img src="./assets/images/proj02-img.png" alt="Project 02">
+      </a>
+    </div>
+
+    <div class="box">
       <h4>Horison Media Project</h4>
       <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/horiseonMedia-challenge1/">
         <img src="./assets/images/horison-img.png" alt="Horison Media">
         </a>
     </div>
-      <div class="box-3 column is-4">
+
+      <div class="box">
         <h4>Portfolio Project</h4>
         <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
           <img src="./assets/images/port-img.png" alt="Portfolio Site">
         </a>
     </div>
-    <div class="box-4 column is-4">
+
+    <div class="box ">
       <h4>Password Generator</h4>
       <p>JAVASCRIPT</p>
       <a href="https://elip2389.github.io/password-generator-chall03/">
         <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
     </div>
-    <div class="box-5 column is-4">
+
+    <div class="box ">
       <h4>Coding Quiz</h4>
       <p>HTML/CSS/JAVASCRIPT</p>
       <a href="https://elip2389.github.io/CodingQuiz-chall04/">
         <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
         </a>
     </div>
-    <div class="box-6 column is-4">
+
+    <div class="box ">
       <h4>Work Day Scheduler</h4>
       <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
       <a href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
         <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
         </a>
     </div>
-    <div class="box-7 column is-4">
+
+    <div class="box ">
       <h4>Weather DashBoard</h4>
       <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
       <a href="https://elip2389.github.io/weather-dashboard-chall06/">
         <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
     </div>
-  </div>
 </div>  
  </section>
 
