updated portfolio section Projects text

--- a/index.html
+++ b/index.html
@@ -1,98 +1,103 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Professional Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Professional Portfolio</title>
 
-</head>    
+</head>
+
 <body>
-    <!-- header -->
-    <header>
-           <a href="./index.html"> <h1>Eli Pagan</h1> </a>
-        <!-- navigation -->
-        <nav>
-          <ul>
-              <li> 
-                 <a href="#About">About</a>
-               </li>
-              <li>
-                 <a href="#Work">Work</a>
-              </li>
-             <li>
-                <a href="#Contact">Contact</a> 
-              </li>
-              <li>
-                <a href="./assets/images/Eliezer-Pagan (4).pdf">Resume</a>
-              </li>
-          </ul>
-        </nav>
-    </header>
+  <!-- header -->
+  <header>
+    <a href="./index.html">
+      <h1>Eli Pagan</h1>
+    </a>
+    <!-- navigation -->
+    <nav>
+      <ul>
+        <li>
+          <a href="#About">About</a>
+        </li>
+        <li>
+          <a href="#Projects">Projects</a>
+        </li>
+        <li>
+          <a href="#Contact">Contact</a>
+        </li>
+        <li>
+          <a href="./assets/images/Eliezer-Pagan (4).pdf">Resume</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- HERO -->
-    <section class="hero">
-      <div class="columns">
+  <!-- HERO -->
+  <section class="hero">
+    <div class="columns">
       <div class="intro column is-8">
         <h2>Hi, I am
-         <br> Eli Pagan</h2>
+          <br> Eli Pagan
+        </h2>
         <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT</p>
-             <p class="fly">READY TO WORK FOR YOU!</p>
-             </div>
+        <p class="fly">READY TO WORK FOR YOU!</p>
+      </div>
       <div class="live column">
         <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
       </div>
-      </div>
-    </section>
-
-    <!-- ABOUT SECTION -->
-    <section id="About"  class="About">
-      <div class="me">
-        <h3>About</h3>
-        </div>
-        <div class="bio">
-        <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
-          I chose to study and learn web development because it is both challenging and rewarding as a career and personal 
-          goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way so that 
-          I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!
-        
-        </p>
-      </div>
-    </section>
-
-    <!-- PORTFOLIO SECTION -->
-    <section class="container has-text-centered-mobile">
- <div id="Work" class=" is-mobile">
-      <div class="">
-        <h3>Work</h3>
-      </div>
-
-  <div class="portfolios tile  is-vertical is-parent is-mobile">
-   <div class="box "> 
-     <h4>The Sprint Group Bar Finder</h4>
-     <p>HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p> 
-    <a href="https://adamdagi.github.io/project-01/">
-      <img src="./assets/images/portfolio2-img.png" alt="Project 01">
-    </a>
     </div>
-    
-    <div class="box">
-      <h4>The HYPE</h4>
-      <p>HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
-         MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
-      <a href="https://immense-springs-30161.herokuapp.com/">
-        <img src="./assets/images/proj02-img.png" alt="Project 02">
-      </a>
+  </section>
+
+  <!-- ABOUT SECTION -->
+  <section id="About" class="About">
+    <div class="me">
+      <h3>About</h3>
+    </div>
+    <div class="bio">
+      <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
+        I chose to study and learn web development because it is both challenging and rewarding as a career and personal
+        goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way
+        so that
+        I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!
+
+      </p>
+    </div>
+  </section>
+
+  <!-- PORTFOLIO SECTION -->
+  <section class="container has-text-centered-mobile">
+    <div id="Projects" class="project is-mobile has-text-centered">
+        <p>Projects</p>
     </div>
 
-    <div class="box">
-      <h4>Horison Media Project</h4>
-      <p>HTML/CSS/RESPONSIVE DESIGN</p>
-        <a href="https://elip2389.github.io/horiseonMedia-challenge1/">
-        <img src="./assets/images/horison-img.png" alt="Horison Media">
+    <div class="portfolios tile is-vertical is-parent is-mobile">
+      <div class="box ">
+        <h4>The Sprint Group Bar Finder</h4>
+        <p>HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p>
+        <a href="https://adamdagi.github.io/project-01/">
+          <img src="./assets/images/portfolio2-img.png" alt="Project 01">
         </a>
-    </div>
+      </div>
+
+      <div class="box">
+        <h4>The HYPE</h4>
+        <p>HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
+          MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
+        <a href="https://immense-springs-30161.herokuapp.com/">
+          <img src="./assets/images/proj02-img.png" alt="Project 02">
+        </a>
+      </div>
+
+      <div class="box">
+        <h4>Horison Media Project</h4>
+        <p>HTML/CSS/RESPONSIVE DESIGN</p>
+        <a href="https://elip2389.github.io/horiseonMedia-challenge1/">
+          <img src="./assets/images/horison-img.png" alt="Horison Media">
+        </a>
+      </div>
 
       <div class="box">
         <h4>Portfolio Project</h4>
@@ -100,57 +105,58 @@
         <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
           <img src="./assets/images/port-img.png" alt="Portfolio Site">
         </a>
-    </div>
+      </div>
 
-    <div class="box ">
-      <h4>Password Generator</h4>
-      <p>JAVASCRIPT</p>
-      <a href="https://elip2389.github.io/password-generator-chall03/">
-        <img src="./assets/images/passgen-img.png" alt="Password Generator">
+      <div class="box ">
+        <h4>Password Generator</h4>
+        <p>JAVASCRIPT</p>
+        <a href="https://elip2389.github.io/password-generator-chall03/">
+          <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
-    </div>
+      </div>
 
-    <div class="box ">
-      <h4>Coding Quiz</h4>
-      <p>HTML/CSS/JAVASCRIPT</p>
-      <a href="https://elip2389.github.io/CodingQuiz-chall04/">
-        <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
+      <div class="box ">
+        <h4>Coding Quiz</h4>
+        <p>HTML/CSS/JAVASCRIPT</p>
+        <a href="https://elip2389.github.io/CodingQuiz-chall04/">
+          <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
         </a>
-    </div>
+      </div>
 
-    <div class="box ">
-      <h4>Work Day Scheduler</h4>
-      <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
-      <a href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
-        <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
+      <div class="box ">
+        <h4>Work Day Scheduler</h4>
+        <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
+        <a href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
+          <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
         </a>
-    </div>
+      </div>
 
-    <div class="box ">
-      <h4>Weather DashBoard</h4>
-      <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
-      <a href="https://elip2389.github.io/weather-dashboard-chall06/">
-        <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
+      <div class="box ">
+        <h4>Weather DashBoard</h4>
+        <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
+        <a href="https://elip2389.github.io/weather-dashboard-chall06/">
+          <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
+      </div>
     </div>
-</div>  
- </section>
+  </section>
 
-    <!-- CONTACT SECTION -->
-    <section id="Contact" class="contact">
-      <div class="tact">
+  <!-- CONTACT SECTION -->
+  <section id="Contact" class="contact">
+    <div class="tact">
       <h3>Contact</h3>
-      </div>
-      <div>
-        <address>
-          43 Bronx River RD <br>
-          Yonkers, New York <br>
-          10461 <br>
-          Phone: 347-445-9749 <br>
-          Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a> <br>
-        </address>
-      </div>
-    </section>
+    </div>
+    <div>
+      <address>
+        43 Bronx River RD <br>
+        Yonkers, New York <br>
+        10461 <br>
+        Phone: 347-445-9749 <br>
+        Email: <a href="mailto:Mbk8689@gmail.com">Mbk8689@gmail.com</a> <br>
+      </address>
+    </div>
+  </section>
 
-  </body>
+</body>
+
 </html>
