fixed text and styling for bar finder proj 1

--- a/index.html
+++ b/index.html
@@ -69,19 +69,25 @@
 
   <!-- PORTFOLIO SECTION -->
   <section class="container has-text-centered-mobile">
-    <div id="Projects" class="project is-mobile has-text-centered">
+     <div id="Projects" class="project has-text-centered">
         <p>Projects</p>
     </div>
 
-    <div class="portfolios tile is-vertical is-parent is-mobile">
-      <div class="box ">
-        <h4>The Sprint Group Bar Finder</h4>
-        <p>HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p>
-        <a href="https://adamdagi.github.io/project-01/">
+<div class="tile is-ancestor">
+
+    <!-- <div class="portfolios tile is-mobile"> -->
+      <div class="tile is-6 is-parent">
+        <div class="tile is-child box">
+        <a style="color: black;" href="https://adamdagi.github.io/project-01/">
+          <p class="is-size-3">The Sprint Group Bar Finder</p>
+          <hr>
+          <p class="is-size-5">HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p>
           <img src="./assets/images/portfolio2-img.png" alt="Project 01">
         </a>
+        </div>
       </div>
 
+      <div class="tile">
       <div class="box">
         <h4>The HYPE</h4>
         <p>HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
@@ -90,6 +96,8 @@
           <img src="./assets/images/proj02-img.png" alt="Project 02">
         </a>
       </div>
+      </div>
+  
 
       <div class="box">
         <h4>Horison Media Project</h4>
@@ -138,7 +146,9 @@
           <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
       </div>
+      
     </div>
+   
   </section>
 
   <!-- CONTACT SECTION -->
