--- a/index.html
+++ b/index.html
@@ -69,35 +69,34 @@
 
   <!-- PORTFOLIO SECTION -->
   <section class="container has-text-centered-mobile">
-     <div id="Projects" class="project has-text-centered">
-        <p>Projects</p>
+    <div id="Projects" class="project has-text-centered">
+      <p>Projects</p>
     </div>
-
-<div class="tile is-ancestor">
-
-    <!-- <div class="portfolios tile is-mobile"> -->
+    <!-- Groupe Project 01 Bar Finder -->
+    <div class="tile is-ancestor">
+      <!-- <div class="portfolios tile is-mobile"> -->
       <div class="tile is-6 is-parent">
         <div class="tile is-child box">
-        <a style="color: black;" href="https://adamdagi.github.io/project-01/">
-          <p class="is-size-3">The Sprint Group Bar Finder</p>
-          <hr>
-          <p class="is-size-5">HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p>
-          <img src="./assets/images/portfolio2-img.png" alt="Project 01">
-        </a>
+          <a style="color: black;" href="https://adamdagi.github.io/project-01/">
+            <p class="is-size-3">The Sprint Group Bar Finder</p>
+            <hr>
+            <p class="is-size-5">HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p>
+            <img src="./assets/images/portfolio2-img.png" alt="Project 01">
+          </a>
+        </div>
+      </div>
+      <!-- Group Project 2 The Hype -->
+      <div class="tile is-6 is-parent">
+        <div class="tile is-child box">
+          <a style="color: black;" href="https://immense-springs-30161.herokuapp.com/">
+            <p class="is-size-3">The HYPE</p>
+            <p class="is-size-5">HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
+              MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
+            <img src="./assets/images/proj02-img.png" alt="Project 02">
+          </a>
         </div>
       </div>
 
-      <div class="tile">
-      <div class="box">
-        <h4>The HYPE</h4>
-        <p>HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
-          MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
-        <a href="https://immense-springs-30161.herokuapp.com/">
-          <img src="./assets/images/proj02-img.png" alt="Project 02">
-        </a>
-      </div>
-      </div>
-  
 
       <div class="box">
         <h4>Horison Media Project</h4>
@@ -146,9 +145,9 @@
           <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
       </div>
-      
+
     </div>
-   
+
   </section>
 
   <!-- CONTACT SECTION -->
