--- a/index.html
+++ b/index.html
@@ -68,37 +68,42 @@
   </section>
 
   <!-- PORTFOLIO SECTION -->
-  <section class="container has-text-centered-mobile">
-    <div id="Projects" class="project has-text-centered">
+  <section class="section is-mobile">
+   <div id="Projects" class="project has-text-centered">
       <p>Projects</p>
     </div>
+</section>
+
+    <section class="">
     <!-- Groupe Project 01 Bar Finder -->
-    <div class="tile is-ancestor">
-      <!-- <div class="portfolios tile is-mobile"> -->
-      <div class="tile is-6 is-parent">
-        <div class="tile is-child box">
-          <a style="color: black;" href="https://adamdagi.github.io/project-01/">
-            <p class="is-size-3">The Sprint Group Bar Finder</p>
+    <!-- columns 1 -->
+    <div class="columns">
+        <div class="column is-6 is-offset-one-quarter">
+          <a class="box has-text-centered" style="color: black;" href="https://adamdagi.github.io/project-01/">
+            <p class="is-size-3 has-text-weight-bold">The Sprint Group Bar Finder</p>
             <hr>
-            <p class="is-size-5">HTML/CSS/JAVASCRIPT/BOOTSTRAP/JQUERY/API</p>
+            <p class="is-size-5">HTML/CSS/JAVASCRIPT/
+              <br>BOOTSTRAP/JQUERY/API</p>
             <img src="./assets/images/portfolio2-img.png" alt="Project 01">
           </a>
         </div>
       </div>
       <!-- Group Project 2 The Hype -->
-      <div class="tile is-6 is-parent">
-        <div class="tile is-child box">
-          <a style="color: black;" href="https://immense-springs-30161.herokuapp.com/">
-            <p class="is-size-3">The HYPE</p>
+      <div class="columns">
+     <div class="column is-6 is-offset-one-quarter">
+          <a class="box has-text-centered" style="color: black;" href="https://immense-springs-30161.herokuapp.com/">
+            <p class="is-size-3 has-text-weight-bold">The HYPE</p>
+            <hr>
             <p class="is-size-5">HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
               MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
             <img src="./assets/images/proj02-img.png" alt="Project 02">
           </a>
         </div>
-      </div>
-
-
-      <div class="box">
+  </div>
+     <!-- individual projects -->
+     <!-- columns 2 -->
+     <div class="columns">
+      <div class="column is-3">
         <h4>Horison Media Project</h4>
         <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/horiseonMedia-challenge1/">
@@ -106,7 +111,7 @@
         </a>
       </div>
 
-      <div class="box">
+      <div class="column">
         <h4>Portfolio Project</h4>
         <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
@@ -114,15 +119,17 @@
         </a>
       </div>
 
-      <div class="box ">
+      <div class="column">
         <h4>Password Generator</h4>
         <p>JAVASCRIPT</p>
         <a href="https://elip2389.github.io/password-generator-chall03/">
           <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
       </div>
+</div>
 
-      <div class="box ">
+<div class="columns">
+      <div class="column">
         <h4>Coding Quiz</h4>
         <p>HTML/CSS/JAVASCRIPT</p>
         <a href="https://elip2389.github.io/CodingQuiz-chall04/">
@@ -130,7 +137,7 @@
         </a>
       </div>
 
-      <div class="box ">
+      <div class="column ">
         <h4>Work Day Scheduler</h4>
         <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
         <a href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
@@ -138,16 +145,15 @@
         </a>
       </div>
 
-      <div class="box ">
+      <div class="column">
         <h4>Weather DashBoard</h4>
         <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
         <a href="https://elip2389.github.io/weather-dashboard-chall06/">
           <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
       </div>
-
-    </div>
-
+  
+</div>
   </section>
 
   <!-- CONTACT SECTION -->
