updated horison media text and style

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 </section>
 
-    <section class="">
+    <section class="is-mobile">
     <!-- Groupe Project 01 Bar Finder -->
     <!-- columns 1 -->
     <div class="columns">
@@ -103,15 +103,16 @@
      <!-- individual projects -->
      <!-- columns 2 -->
      <div class="columns">
-      <div class="column is-3">
-        <h4>Horison Media Project</h4>
-        <p>HTML/CSS/RESPONSIVE DESIGN</p>
-        <a href="https://elip2389.github.io/horiseonMedia-challenge1/">
-          <img src="./assets/images/horison-img.png" alt="Horison Media">
+      <div class="column is-4">
+        <a class="box has-text-centered" href="https://elip2389.github.io/horiseonMedia-challenge1/">
+        <p class="is-size-4 has-text-weight-bold">Horison Media Project <br>
+          <hr>
+        <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
+        <img src="./assets/images/horison-img.png" alt="Horison Media">
         </a>
       </div>
 
-      <div class="column">
+      <div class="column is-4">
         <h4>Portfolio Project</h4>
         <p>HTML/CSS/RESPONSIVE DESIGN</p>
         <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
@@ -119,7 +120,7 @@
         </a>
       </div>
 
-      <div class="column">
+      <div class="column is-4">
         <h4>Password Generator</h4>
         <p>JAVASCRIPT</p>
         <a href="https://elip2389.github.io/password-generator-chall03/">
