updates toprojects section

--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
       <div class="columns">
      <div class="column is-6 is-offset-one-quarter">
           <a class="box has-text-centered" style="color: black;" href="https://immense-springs-30161.herokuapp.com/">
-            <p class="is-size-3 has-text-weight-bold">The HYPE</p>
-            <hr>
+            <p class="is-size-3 has-text-weight-bold">The HYPE</p> <hr>
             <p class="is-size-5">HTML/CSS/JAVASCRIPT/BULMA/EXPRESS <br>
               MYSQL/MVC/SEQUELIZE/NODE/HANDLEBARS</p>
             <img src="./assets/images/proj02-img.png" alt="Project 02">
@@ -105,26 +104,25 @@
      <div class="columns">
       <div class="column is-4">
         <a class="box has-text-centered" href="https://elip2389.github.io/horiseonMedia-challenge1/">
-        <p class="is-size-4 has-text-weight-bold">Horison Media Project <br>
-          <hr>
+        <p class="is-size-4 has-text-weight-bold">Horison Media Project <br> <hr>
         <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
         <img src="./assets/images/horison-img.png" alt="Horison Media">
         </a>
       </div>
 
       <div class="column is-4">
-        <h4>Portfolio Project</h4>
-        <p>HTML/CSS/RESPONSIVE DESIGN</p>
-        <a href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
-          <img src="./assets/images/port-img.png" alt="Portfolio Site">
+        <a class="box has-text-centered" href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
+        <p class="is-size-4 has-text-weight-bold">Portfolio Project <br> <hr>
+        <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
+         <img src="./assets/images/port-img.png" alt="Portfolio Site">
         </a>
       </div>
 
       <div class="column is-4">
-        <h4>Password Generator</h4>
-        <p>JAVASCRIPT</p>
-        <a href="https://elip2389.github.io/password-generator-chall03/">
-          <img src="./assets/images/passgen-img.png" alt="Password Generator">
+        <a class="box has-text-centered" href="https://elip2389.github.io/password-generator-chall03/">
+        <p class="is-size-4 has-text-weight-bold">Password Generator<br> <hr>
+        <p class="is-size-5">JAVASCRIPT</p>
+        <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
       </div>
 </div>
