updated coding quiz

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
      <div class="columns">
       <div class="column is-4">
         <a class="box has-text-centered" href="https://elip2389.github.io/horiseonMedia-challenge1/">
-        <p class="is-size-4 has-text-weight-bold">Horison Media Project <br> <hr>
+        <p class="is-size-4 has-text-weight-bold">Horison Media Project</p> <br> <hr>
         <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
         <img src="./assets/images/horison-img.png" alt="Horison Media">
         </a>
@@ -112,7 +112,7 @@
 
       <div class="column is-4">
         <a class="box has-text-centered" href="https://elip2389.github.io/PROFESSIONALLYprofessionalPORTFOLIO/">
-        <p class="is-size-4 has-text-weight-bold">Portfolio Project <br> <hr>
+        <p class="is-size-4 has-text-weight-bold">Portfolio Project </p><br> <hr>
         <p class="is-size-5">HTML/CSS/RESPONSIVE DESIGN</p>
          <img src="./assets/images/port-img.png" alt="Portfolio Site">
         </a>
@@ -120,18 +120,18 @@
 
       <div class="column is-4">
         <a class="box has-text-centered" href="https://elip2389.github.io/password-generator-chall03/">
-        <p class="is-size-4 has-text-weight-bold">Password Generator<br> <hr>
+        <p class="is-size-4 has-text-weight-bold">Password Generator</p><br> <hr>
         <p class="is-size-5">JAVASCRIPT</p>
         <img src="./assets/images/passgen-img.png" alt="Password Generator">
         </a>
       </div>
 </div>
-
+<!-- column 3 -->
 <div class="columns">
-      <div class="column">
-        <h4>Coding Quiz</h4>
-        <p>HTML/CSS/JAVASCRIPT</p>
-        <a href="https://elip2389.github.io/CodingQuiz-chall04/">
+      <div class="column is-4">
+        <a class="box has-text-centered" href="https://elip2389.github.io/CodingQuiz-chall04/">
+        <p class="is-size-4 has-text-weight-bold"> Coding Quiz<br> <hr>
+        <p class="is-size-5">HTML/CSS/JAVASCRIPT</p>
           <img src="./assets/images/quiz-img.png" alt="Coding Quiz">
         </a>
       </div>
