updated work day scheduler

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
       </div>
 
       <div class="column ">
-        <h4>Work Day Scheduler</h4>
-        <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
-        <a href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
-          <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
+  <a class="box has-text-centered" href="https://elip2389.github.io/Work-Day-Scheduler-chall05/">
+                <p class="is-size-4 has-text-weight-bold">Work Day Scheduler</p><br><hr>
+        <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS</p>
+        <img src="./assets/images/workday-img.png" alt="Work Day Scheduler">
         </a>
       </div>
 
