--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
       </div>
 
       <div class="column">
-        <h4>Weather DashBoard</h4>
-        <p>HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
-        <a href="https://elip2389.github.io/weather-dashboard-chall06/">
-          <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
+        <a class="box has-text-centered" href="https://elip2389.github.io/weather-dashboard-chall06/">
+        <p class="is-size-4 has-text-weight-bold">Weather DashBoard</p><br><hr>
+        <p class="is-size-5">HTML/CSS/JAVASCRIPT/<br>JQUERY/MOMENT.JS/BOOTSTRAP</p>
+        <img src="./assets/images/weather-img.png" alt="Weather DashBoard">
         </a>
       </div>
   
