--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
   </header>
 
   <!-- HERO -->
-  <section class="hero">
-    <div class="columns">
+  <section class="">
+    <div class="hero box columns">
       <div class="intro column is-8">
-        <h2>Hi, I am
-          <br> Eli Pagan
+        <h2>Eli Pagan <br>
+           Full Stack Web developer
         </h2>
-        <p>HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT</p>
-        <p class="fly">READY TO WORK FOR YOU!</p>
       </div>
       <div class="live column">
         <img src="./assets/images/ell-img.jpg" alt="Eli Pagan" />
@@ -51,19 +49,15 @@
     </div>
   </section>
 
-  <!-- ABOUT SECTION -->
-  <section id="About" class="About">
-    <div class="me">
-      <h3>About</h3>
-    </div>
-    <div class="bio">
-      <p>I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
+  <!-- About Section -->
+  <section id="About" class="is-mobile">
+      <p class="about has-text-centered">About</p>
+    <div class="box">
+      <p class="is-size-3">I am a full stack web developer who is skilled at HTML, CSS, GIT, RESPONSIVE DESIGN, JAVASCRIPT and MORE!
         I chose to study and learn web development because it is both challenging and rewarding as a career and personal
         goal. <br> I am looking forward to working with a company that will challenge and teach me every step of the way
         so that
-        I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!
-
-      </p>
+        I can become the best version of myself and as a web developer. Hopefully it's with YOU!!!</p>
     </div>
   </section>
 
